--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Mi portafolio Web</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <link rel="icon" href="main/Icon/logo.png" type="image/png">
+    <link rel="icon" href="/Icon/logo.png" type="image/png">
 </head>
 <!-- Encabezados -->
 <body>
