--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Mi portafolio Web</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <link rel="icon" href="/Icon/logo.png" type="image/png">
+    <link rel="icon" href="Icon/logo.png" type="image/png">
 </head>
 <!-- Encabezados -->
 <body>
     <header id="home">
-        <img id="logo" src="/Icon/logo.png" alt="logo">
+        <img id="logo" src="Icon/logo.png" alt="logo">
         <h1>Portafolio Web</h1>
     </header>
     <nav>
@@ -90,7 +90,7 @@
         </article>
         <article>
             <h4>Audio:</h4>
-            <audio controls src="/Audio/Audio Presentacion.mp3">Audio:</audio>
+            <audio controls src="Audio/Audio Presentacion.mp3">Audio:</audio>
         </article>
     </main>
     <br>
